Fixed scrollbar to be constant. Styled 1st step of Registration. Fixed padding on marketplace photos. Changed placeholder text on Postbox. Changed copy on 1st step.

--- a/app/stylesheets/layout/_tour.sass
+++ b/app/stylesheets/layout/_tour.sass
@@ -104,8 +104,6 @@ p.welcome-divider
     height: 2px
   img.find_title 
     margin: 15px auto 0px 30px
-  h2
-    margin: -5px auto 20px auto
   .civic_left
     float: left
     width: 122px
@@ -435,7 +433,8 @@ div#find_button
   p
     margin-bottom: 13px
     color: $black
-    line-height: 20px
+    line-height: 21px
+    font-size: 17px
   p.intro
     margin-bottom: 15px
     margin-top: 0px
