--- a/app/stylesheets/modules/_wire.sass
+++ b/app/stylesheets/modules/_wire.sass
@@ -116,7 +116,7 @@
               //text-align: left
               //border-top: 1px dotted #ddd
               //position: relative
-              padding: 0px 15px 0px 0px
+              padding: 0px 7px 0px 0px
               &:last-child
                 padding-right: 0px
               //&:hover
